# pipe-ddd-event-driven

./: .gitignore  pyproject.toml
app/: __main__.py  container.py
app/__main__/: fastapi.py
app/adapters/: orm.py  repository.py
app/adapters/sql/: init.sql
app/domain/: events.py  models.py
app/domains/: events.py
app/presentation/: router.py  schema.py
app/services/: messagebus.py  uow.py  usecases.py
